--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,218 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=Quicksand:wght@300..700&display=swap');
+
+
+/* Este code es para el body del index unicamente */
+.index-body  {
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.6),   /* capa negra oscura */
+        rgba(0, 0, 0, 0.6)    /* puedes ajustar opacidad */
+    ),
+    url('../img/Backround-Index.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: 'kanit', 'sans-serif';
+    color: white;
+    line-height: 1.5;
+    font-size: 1.2rem;
+}
+
+
+
+
+/* Este code es para todo el sitio web */
+/* Es la sidebar */
 body {
     background-color: #faf3e0;
+    font-family: 'kanit', 'sans-serif';
+    color: white;
+    line-height: 1.5;
+    font-size: 1.2rem;
 }
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+    color: white;
+}
+
+h1{
+    text-transform: capitalize;
+    margin-bottom: 0.75rem;
+    font-family: 'Karla', 'sans-serif';
+    font-size: 3rem;
+}
+
+@media screen and (min-width: 800px) {
+    h1 {
+        font-size: 4rem;
+        line-height: 1;
+    }
+    body{
+        font-size: 1rem;
+    }
+}
+
+.sidebar-toggle {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
+    font-size: 2rem;
+    background-color: transparent;
+    border: transparent;
+    color: rgb(0, 0, 0);
+    transition: .3s linear;
+    cursor: pointer;
+}
+
+.sidebar-toggle:hover {
+    color: #f73434;
+}
+
+.sidebar-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
+
+.close-btn{
+    font-size: 1.75rem;
+    background-color: transparent;
+    border-color: transparent;
+    border: none;
+    color: red;
+    transition: .3s ease;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: #a30505;
+    transform: rotate(180deg);
+}
+
+.links a{
+    display: block;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    padding: 1rem 1.5rem;
+    color: white;
+    transition: .3s ease;
+}
+
+.links a:hover {
+    background-color: #9d9773;
+    color: rgb(2, 0, 0);
+    padding-left: 1.7rem;
+}
+
+.sidebar-logo img{
+    justify-self: center;
+    display: flex;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.sidebar{
+    font-family: 'karla', 'sans-serif';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    display : grid;
+    grid-template-rows: auto 1fr auto;
+    row-gap: 1rem;
+    box-shadow: #a30505;
+    transition: transform 0.3s ease;
+    transform: translate(-100%);
+    z-index: 1;
+}
+
+.show-sidebar {
+    transform: translate(0);
+}
+@media screen and (min-width: 600px) {
+    .sidebar{
+        width: 400px;
+    }
+}
+/* Fin del sidebar */
+
+/* Inicio del css para el contenido principal del index */
+.hero {
+    position: relative;
+    height: 100vh; /* pantalla completa */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    padding: 2rem;
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+    );
+    z-index: 0;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 1;
+    max-width: 600px;
+    color: white;
+}
+
+.hero-content h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.hero-content p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin-bottom: 1.5rem;
+}
+
+.btn-hero {
+    display: inline-block;
+    background: #6c8f3d; /* verde oliva */
+    opacity: 0.5;
+    border: black;
+    color: white;
+    padding: 0.8rem 1.5rem;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s ease;
+}
+
+.btn-hero:hover {
+    background: #425226;
+}
+
+
+
